# sistema-ortho

./: .env.example  Dockerfile  README.md  compose.yaml  manage.py  pyproject.toml  run.sh  wait_for_db.py
.github/workflows/: main.yml
core/: urls.py
doctor/: admin.py
doctor/migrations/: 0001_initial.py  0002_doctor_user.py  0003_doctor_slug.py  0004_alter_doctor_slug.py  0005_remove_doctor_slug.py
doctor/models/: __init__.py  doctor.py  specialization.py
patient/: urls.py
patient/migrations/: 0001_initial.py
patient/models/: observation.py  patient-tag.py  patient.py  tag.py
patient/views/: __init__.py  patient.py
proceeding/: admin.py  apps.py  urls.py
proceeding/migrations/: 0001_initial.py  0002_alter_proceeding_description.py  0003_proceeding_proceeding_type.py  0004_alter_proceeding_description_and_more.py
proceeding/models/: __init__.py  proceeding.py
proceeding/views/: __init__.py  proceeding.py
sistemaortho/: asgi.py  settings.py  urls.py  wsgi.py
static/css/: style.css
static/css/core/: dashboard.css
static/css/patient/: create.css  list.css  update_and_detail.css
static/css/proceeding/: create.css  list.css  update_and_detail.css
static/js/: scripts.js
templates/core/: base.html  dashboard.html  login.html
templates/core/components/: navbar.html
templates/patient/: create.html  list.html  update_and_detail.html
templates/proceeding/: create.html  list.html  update_and_detail.html
