[project]
name = "sistemaortho"
version = "0.1.0"
description = ""
authors = [
    {name = "Parallax Digital Systems"}
]
license = {text = "Apache 2.0"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django (>=6.0.3,<7.0.0)",
    "uvicorn (>=0.42.0,<0.43.0)",
    "gunicorn (>=25.1.0,<26.0.0)",
    "psycopg2-binary (>=2.9.11,<3.0.0)",
    "whitenoise (>=6.12.0,<7.0.0)",
]

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)",
    "faker (>=40.11.0,<41.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
